// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Custom|Style Default Story 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <ng-component>
    <storybook-button-component
      _nghost-a-c19=""
      ng-reflect-text="Button with custom styles"
    >
      <button
        _ngcontent-a-c19=""
      >
        Button with custom styles
      </button>
    </storybook-button-component>
  </ng-component>
</storybook-dynamic-app-root>
`;

exports[`Storyshots Custom|Style With Knobs Story 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <ng-component>
    <storybook-button-component
      _nghost-a-c20=""
      ng-reflect-text="Button with custom styles"
    >
      <button
        _ngcontent-a-c20=""
      >
        Button with custom styles
      </button>
    </storybook-button-component>
  </ng-component>
</storybook-dynamic-app-root>
`;
